# twitter-insights

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  railway.json
docs/plans/: 2026-02-21-digest-command-design.md  2026-02-21-digest-implementation-plan.md  2026-02-21-ti-implementation-plan.md  2026-02-21-twitter-insights-design.md
server/: Dockerfile  app.py  auth.py  db.py  r2.py  requirements.txt  validate.py
src/ti/: classify.py  cli.py  config.py  db.py  digest.py  output.py  parser.py  push.py  remote.py  search.py  sync.py  taxonomy.py
src/ti/templates/: digest.html
tests/: conftest.py  test_config.py  test_db.py  test_digest.py  test_e2e_server.py  test_output.py  test_output_contract.py  test_parser.py  test_push.py  test_remote.py  test_search.py  test_server.py  test_sync.py
tests/visual/: generate_sample.py
