[project]
name = "twitter-insights"
version = "0.1.0"
description = "CLI tool for searching curated Twitter insights"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.21",
    "rich>=13.0",
]

[project.scripts]
ti = "ti.cli:app"

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
